# V4-ports

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: esp32c6-setup.md  troubleshooting.md
esp32c6/components/v4_core/: CMakeLists.txt  v4_core_config.h
esp32c6/components/v4_front/: CMakeLists.txt  v4_front_config.h
esp32c6/components/v4_hal/: CMakeLists.txt  v4_hal_config.h
esp32c6/components/v4_hal_esp32c6/: CMakeLists.txt
esp32c6/components/v4_hal_esp32c6/include/: v4_hal_esp32c6.h
esp32c6/components/v4_hal_esp32c6/src/: hal_gpio.c  hal_system.c  hal_timer.c  hal_uart.c
esp32c6/components/v4_link/: CMakeLists.txt  idf_component.yml  v4_link_config.h  v4_link_port.cpp  v4_link_port.hpp
esp32c6/components/v4_repl/: CMakeLists.txt  repl_local_stub.c
esp32c6/examples/v4-blink/: CMakeLists.txt  README.md  project_config.h  sdkconfig.defaults
esp32c6/examples/v4-blink/main/: CMakeLists.txt  main.c
esp32c6/examples/v4-link-demo/: CMakeLists.txt  README.md  project_config.h  sdkconfig.defaults
esp32c6/examples/v4-link-demo/host/: README.md  generate_examples.py  test_6_delays_with_nop.py  test_multiple_delays.py  test_single_delay.py  v4_link_send.py
esp32c6/examples/v4-link-demo/main/: CMakeLists.txt  main.cpp
esp32c6/examples/v4-repl-demo/: CMakeLists.txt  sdkconfig.defaults
esp32c6/examples/v4-repl-demo/main/: CMakeLists.txt  main.c
